--- a/Animal shelter 2/Animal shelter 2/Animal shelter 2.csproj
+++ b/Animal shelter 2/Animal shelter 2/Animal shelter 2.csproj
@@ -44,20 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Administration.cs" />
-    <Compile Include="Animal.cs" />
-    <Compile Include="Cat.cs" />
-    <Compile Include="Dog.cs" />
+    <Compile Include="Classes\Administration.cs" />
+    <Compile Include="Classes\Animal.cs" />
+    <Compile Include="Classes\Cat.cs" />
+    <Compile Include="Classes\Dog.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Gender.cs" />
+    <Compile Include="Classes\Gender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleDate.cs" />
+    <Compile Include="Classes\SimpleDate.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
