--- a/Animal shelter 2/Animal shelter 2/Animal shelter 2.csproj
+++ b/Animal shelter 2/Animal shelter 2/Animal shelter 2.csproj
@@ -48,18 +48,17 @@
     <Compile Include="Classes\Animal.cs" />
     <Compile Include="Classes\Cat.cs" />
     <Compile Include="Classes\Dog.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ReservatieForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ReservatieForm.Designer.cs">
+      <DependentUpon>ReservatieForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Gender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Classes\SimpleDate.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ReservatieForm.resx">
+      <DependentUpon>ReservatieForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
